@@ -1,3 +1,7 @@
+2005-03-22  Jakub Steiner <jimmac@ximian.com>
+
+	* *oasis*: got the mime type wrong. s/-x//
+
 2005-03-21  Jakub Steiner <jimmac@ximian.com>
 
 	* gnome-mime-application-x-vnd.oasis.openoffice.database.png
